# hse_mlops-embed_api

./: .gitignore  README.md  main.py  pyproject.toml  requiremetns.txt
load/: k6_vus100.js  k6_vus20.js
routes/: dynamic_batch.py  onnx_embed.py  simple_embed.py
