[project]
name = "hw3"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "huggingface-hub==0.35.3",
    "numpy>=2.4.3",
    "onnx==1.20.1",
    "onnxruntime==1.24.3",
    "optimum==1.16.2",
    "optimum-onnx==0.0.3",
    "pandas>=3.0.1",
    "sentence-transformers==5.3.0",
    "tokenizer>=3.6.2",
    "transformers==4.53.3",
    "uvicorn>=0.41.0",
]
